modified content page, fixed a bug where the logo wouldnt work on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,6 +51,8 @@
 
   /* Footer */
 
+  --footer-height: 20vh;
+
   --footer-background: #00b600;
 }
 
@@ -74,7 +76,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  min-height: 100%;
+  min-height: calc(100vh - calc(var(--nav-height) + var(--footer-height)));
   margin: 0;
   overflow: hidden;
 }
